# ideaencrypt

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  argparse.cpp  idea.cpp  ideakeygen.cpp  keygen.cpp  main.cpp
include/: ideaencrypt.hpp
include/ideacli/: argparse.hpp
include/ideaencrypt/: block.hpp  calc.hpp  cipher.hpp  key.hpp
src/: CMakeLists.txt  block.cpp  calc.cpp  cipher.cpp  ideaencrypt.cpp  key.cpp  keyiter.cpp
tests/: CMakeLists.txt  test_calc.cpp  test_cipher.cpp  test_keygen.cpp
